Refactored names of files. Made next file for questions #2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Java Script From the start</title>
 </head>
 <body>
-<script src="js1-lesson1.js" async defer></script>
+<script src="js1-q1.js" async defer></script>
+<script src="js1-q2.js" async defer></script>
 <!-- async и defer использованы для ассинхронной загрузки скрипта. -->
 
 </body>
