--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <script src="js1-q1.js" async defer></script>
 <script src="js1-q2.js" async defer></script>
+<script src="js1-q3.js" async defer></script>
 <!-- async и defer использованы для ассинхронной загрузки скрипта. -->
 
 </body>
