--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src="js1-q1.js" async defer></script>
 <script src="js1-q2.js" async defer></script>
 <script src="js1-q3.js" async defer></script>
+<script src="js1-q4.js" async defer></script>
 <!-- async и defer использованы для ассинхронной загрузки скрипта. -->
 
 </body>
