Done! Signed-off-by: CasparOne <vvolodin.victor@gmail.com>
Signed-off-by: CasparOne <vvolodin.victor@gmail.com>

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="js1-q2.js" async defer></script>
 <script src="js1-q3.js" async defer></script>
 <script src="js1-q4.js" async defer></script>
+<script src="js1-q5.js" async defer></script>
 <!-- async и defer использованы для ассинхронной загрузки скрипта. -->
 
 </body>
